--- a/src/index.css
+++ b/src/index.css
@@ -21,6 +21,14 @@ body {
     justify-content: center;
 }
 
+#game-root {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+
 code {
     font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
 }
