--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,47 @@
+@import url('https://fonts.googleapis.com/css2?family=Uchen&display=swap');
+
+*,
+*::after,
+*::before {
+    box-sizing: inherit;
+}
+
 html {
     overflow: hidden;
+    box-sizing: border-box;
 }
 
 body {
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+    font-family: 'Uchen', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto',
+        'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     background-color: rgb(18, 20, 30);
     overflow: hidden;
     color: white;
     touch-action: none;
+    cursor: url('./Cursor.svg') 3 0, default;
+    accent-color: #c8a13c;
+}
+
+input,
+textarea {
+    cursor: url('./CursorText.svg') 10 20, text !important;
+}
+
+a,
+button,
+label,
+select,
+input[type='checkbox'],
+input[type='radio'] {
+    cursor: url('./CursorPointer.svg') 3 0, pointer !important;
+}
+
+button {
+    cursor: inherit;
 }
 
 #root {
